Update and rename README.md to README.mdx

--- a/README.mdx
+++ b/README.mdx
@@ -6,11 +6,12 @@ I work with React ecosystem to build a cool stuff in a web platform
 - 🔭 I’m currently working on ...
 - 🌱 I’m currently learning fullstack development and bloging
 - 👯 I’m looking to collaborate on freelance project
-- 💬 Ask me about ...
 - 📫 How to reach me: albertmanuels10@gmail.com
+
 
 ![GitHub stats](https://github-readme-stats.vercel.app/api?username=albertmanuels&show_icons=true) 
 [![Top Langs](https://github-readme-stats.vercel.app/api/top-langs/?username=albertmanuels)](https://github.com/anuraghazra/github-readme-stats)
+  <a href="https://github.com/albertmanuels?tab=repositories&q=&type=&language=&sort=stargazers"><img height="154" src="https://github-readme-stats.vercel.app/api?username=albertmanuels&show_icons=true&theme=react&count_private=true&hide=contribs" /></a>
 
  
 
